[package]
name = "duo-hotp-export"
version = "1.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bardecoder = "0.2.2"
base32 = "0.4.0"
base64 = "0.13.0"
clap = "2.33.3"
image = "0.22"
qrcode = "0.12.0"
reqwest = { version = "0.11.3", features = ["blocking"] }
serde = "1.0.126"
serde_json = "1.0.64"
